Fix weird padding on mobile devices

--- a/src/pages/Landing/Landing.module.scss
+++ b/src/pages/Landing/Landing.module.scss
@@ -57,7 +57,7 @@ nav {
 }
 
 .hero {
-  padding-left: 20px;
+  padding: 0 20px;
 }
 
 canvas {
